[package]
name = "tokio-actor"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Macro based Asynchronous Actor System"
repository = "https://github.com/zhchang/tokio-actor"
keywords = ["actor", "tokio"]
readme = "readme.MD"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.18.1"
syn = {version="1.0.57",features=["full","fold"]}
quote = "1.0.8"
Inflector = "0.11.4"